--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Getting Started</title>
+        <script src='popup.js'></script>
     </head>
     <body>
         Hello World!
